Bug 117749 - Crash when undoing the pasting of a table
Summary: Crash when undoing the pasting of a table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-WriterMultiListener
  Show dependency treegraph
 
Reported: 2018-05-22 19:33 UTC by Telesto
Modified: 2019-02-06 19:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["SfxItemSet::Get(unsigned short,bool)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-05-22 19:33:35 UTC
Description:
Crash when undoing the pasting of a table

Steps to Reproduce:
1. Insert a table into Writer
2. Copy it
3. Paste it into a new document
4. Press CTRL+Z ->CRASH

Actual Results:  
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.alpha1+
Build ID: b9ebabd675f916a0151ec3893a59131f3a8b2a05
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-05-21_23:26:04
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 raal 2018-05-22 19:45:31 UTC
I can confirm with 6.1master. Regression in 6.1.
Comment 2 raal 2018-05-22 19:55:25 UTC
This seems to have begun at the below commit.
Adding Cc: to Bjoern Michaelsen ; Could you possibly take a look at this one?
Thanks
 f50a7d1701312523b1e8a02bdaa9d6088098c5f0 is the first bad commit
commit f50a7d1701312523b1e8a02bdaa9d6088098c5f0
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sat May 5 08:30:52 2018 +0200

    source 83243003b46dfb258c2b41049b0e1cb82a2d7ddb

author	Bjoern Michaelsen <bjoern.michaelsen@libreoffice.org>	2018-05-04 08:44:47 +0200
committer	Björn Michaelsen <bjoern.michaelsen@libreoffice.org>	2018-05-05 08:14:12 +0200
commit 83243003b46dfb258c2b41049b0e1cb82a2d7ddb (patch)
tree 1e9f4fa59e10e7c8ea30fce1bd5c0cb7c37f87cd
parent 0b56585cfc047decf25c648d3cccfc3c7b594a86 (diff)
use WriterMultiListener instead of SwDepend in SwContentNode
- also move SwContentNode and SwTextNode from
  Modify to SwClientNotify
- this removes the last public use of SwDepend, which should now become
  an implementation detail of WriterMultiListener
Comment 3 Xisco Faulí 2018-06-25 21:40:22 UTC
*** Bug 118382 has been marked as a duplicate of this bug. ***
Comment 4 Telesto 2018-07-10 14:17:35 UTC
Probably the issue when undoing the pasting of heading. BT is slightly different
1. Type some text into writer
2. Apply a heading
2. Copy it
3. Paste it into a new document
4. Press CTRL+Z ->CRASH


WARNING: Stack unwind information not available. Following frames may be wrong.
012ef05c 690f65b0 0000007e 00000000 0000007e svllo!SfxItemPool::IsInRange+0x3
012ef070 6910b4df 0000007e a4453fee 012ef0f8 svllo!SfxItemPool::GetDefaultItem+0x10
012ef0a0 6910acc4 0000007e 00000001 012ef0f8 svllo!SfxItemSet::Get+0xaf
012ef0c4 5d80851b 0cce2590 083491b0 012ef124 svllo!SfxItemSet::ClearItem+0x144
012ef0d4 5d9b7fef 00000000 012ef150 012ef170 swlo!SwAttrSet::ClearItem_BC+0x1b
012ef124 5d9baada 08349208 083491b0 00000000 swlo!SwContentNode::ChkCondColl+0x1df
012ef1d0 5dbcd88e 90d5b3dd 0c572e78 012ef238 swlo!SwContentNode::ResetAllAttr+0x13a
012ef1fc 5dc2ed08 90d5b0ad 00000032 0c3ec3c8 swlo!SwTextNode::ResetAllAttr+0x4e
012ef28c 5dc05c3d 083491b0 90d5b09d 00000000 swlo!SwNodes::UndoTableToText+0x6008
012ef2bc 691b3077 012ef39c 00000000 00000001 swlo!SwDocShell::GetView+0x1bcd
012ef2d4 691b3077 012ef39c 0810f9ec 081a77f0 svllo!SfxListUndoAction::UndoWithContext+0x27
Comment 5 Xisco Faulí 2018-07-23 10:35:56 UTC
bumping version as this is no longer reproducible in 6.1
Comment 6 Commit Notification 2018-07-26 18:36:34 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=847848d1401f23d51501e4b3396967a4bc193913

make SwContentNode handle legacy ModifyNotification() again (tdf#117749)

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-07-27 11:19:01 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: aa84f1458f422c1acf38b53a3e3138cd0e84e313
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Bjoern, Thanks for fixing this!!