make SwContentNode handle legacy ModifyNotification() again (tdf#117749)

Change-Id: If5fe61b6bfd4012be63c27d531100018fb31dd21